talpid-logging/src/snapshots/talpid_logging__diag__windows__test__driverquery_output.snap
---
source: talpid-logging/src/diag.rs
assertion_line: 289
expression: formatted_driverquery_log
---
driverquery.exe "/FO" "csv" "/V" (filtered)
--------
Module Name,Display Name,Description,Driver Type,Start Mode,State,Status,Path
mullvad-split-tunnel,Mullvad Split Tunnel Service,Mullvad Split Tunnel Service,Kernel ,Manual,Stopped,OK,\??\C:\Program Files\Mullvad VPN\resources\mullvad-split-tunnel.sys
MullvadWireGuard,MullvadWireGuard,MullvadWireGuard,Kernel ,Manual,Stopped,OK,C:\WINDOWS\system32\drivers\mullvad-wireguard.sys

--------
