talpid-logging/src/snapshots/talpid_logging__diag__windows__test__pnputil_output.snap
---
source: talpid-logging/src/diag.rs
assertion_line: 311
expression: formatted_logs
---
pnputil.exe "/enum-devices" "/class" "{4d36e972-e325-11ce-bfc1-08002be10318}" "/format" "csv" (filtered)
--------
InstanceId,DeviceDescription,Status,ProblemCode,ProblemStatus,DriverName
ROOT\WINTUN\0000,Wintun Userspace Tunnel,Started,,,oem2.inf

--------
