talpid-logging/src/snapshots/talpid_logging__diag__windows__test__pnputil_problem_output.snap
---
source: talpid-logging/src/diag.rs
assertion_line: 334
expression: formatted_logs
---
pnputil.exe "/enum-devices" "/problem" "/format" "csv" (filtered)
--------
InstanceId,DeviceDescription,Status,ProblemCode,ProblemStatus,DriverName
UEFI\RES_{redacted}\0,Camera Firmware,Problem,10,0xC0210000,oem84.inf

--------
